<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FeedBackActivity">

    <com.ipd.jianghuzuche.common.view.TopView
        android:id="@+id/tv_feed_back_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="bottom"
        app:is_back="true"
        app:title="@string/feed_back"
        app:title_color="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y15"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/x45">

            <EditText
                android:id="@+id/et_feed_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y300"
                android:background="@color/whitesmoke"
                android:gravity="start"
                android:hint="@string/input_feed_back"
                android:padding="@dimen/x25"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_feed_back"
            android:layout_width="@dimen/x400"
            android:layout_height="@dimen/y135"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/y30"
            android:layout_marginTop="@dimen/y30"
            android:background="@drawable/bg_confirm_bt"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>