<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical"
    tools:context=".activity.PersonalDataActivity">

    <com.ipd.jianghuzuche.common.view.TopView
        android:id="@+id/tv_personal_data_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="bottom"
        app:is_back="true"
        app:title="@string/personal_data"
        app:title_color="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/bg_crude_line" />

    <LinearLayout
        android:id="@+id/ll_update_personal_data_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/y45">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/head_img"
            android:textColor="@color/black" />

        <com.ipd.jianghuzuche.common.view.CircleImageView
            android:id="@+id/civ_personal_data_head"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/y100"
            android:layout_marginEnd="@dimen/x15" />

        <ImageView
            android:layout_width="@dimen/x45"
            android:layout_height="@dimen/y40"
            app:srcCompat="@drawable/ic_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <LinearLayout
        android:id="@+id/ll_update_personal_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/y45">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_personal_data_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x15" />

        <ImageView
            android:layout_width="@dimen/x45"
            android:layout_height="@dimen/y40"
            app:srcCompat="@drawable/ic_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <LinearLayout
        android:id="@+id/ll_update_personal_data_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/y45">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_num"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_personal_data_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>