<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y654"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/bg_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_title" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x144"
                android:layout_marginStart="@dimen/x144"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y90"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_num"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:paddingStart="@dimen/x30"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y30"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_code"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_register_verification_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingStart="@dimen/x30"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/bt_get_verification_code"
                        android:layout_width="@dimen/x150"
                        android:layout_height="@dimen/y60"
                        android:layout_gravity="end"
                        android:background="@drawable/bg_verification_select"
                        android:text="@string/get"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y30"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_register_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/x30"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y30"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invitation_code"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_invitation_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:maxLines="1"
                        android:paddingStart="@dimen/x30"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y30"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="我已阅读并同意"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_user_agreement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/x15"
                        android:layout_weight="1"
                        android:text="@string/user_agreement"
                        android:textColor="@color/tx_bottom_navigation_select" />

                    <TextView
                        android:id="@+id/tv_register_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/login_now"
                        android:textColor="@color/tx_bottom_navigation_select"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y135"
                android:layout_marginBottom="@dimen/y30"
                android:layout_marginEnd="@dimen/x45"
                android:layout_marginStart="@dimen/x45"
                android:layout_marginTop="@dimen/y354"
                android:background="@drawable/bg_confirm_bt"
                android:text="@string/register"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>